Add bootstrap4 for github pages

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,33 @@
 ---
 title: Projects
 layout: page
-image:
 ---
-<a href="#"> <img src="https://s13.postimg.org/wip8loluv/Malcolm_X-tribute.png" alt=""> </a>
+  <!DOCTYPE html>
+  <html lang="en" dir="ltr">
+    <head>
+      <meta charset="utf-8">
+      <title></title>
+    </head>
+    <body>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <a href="#"> <img src="https://s13.postimg.org/wip8loluv/Malcolm_X-tribute.png" alt=""> </a>
+    </div>
+    <div class="col-md-4">
+      <a href="#"> <img src="https://s13.postimg.org/wip8loluv/Malcolm_X-tribute.png" alt=""> </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="#"> <img src="https://s13.postimg.org/wip8loluv/Malcolm_X-tribute.png" alt=""> </a>
+    </div>
+  </div>
+</div>
+
+  <script src="{{'/node_modules/jquery/dist/jquery.min.js' | prepend: site.baseurl}}"></script>
+	<script src="{{'/node_modules/popper.js/dist/popper.min.js' | prepend: site.baseurl}}"></script>
+	<script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js' | prepend: site.baseurl}}"></script>
+</body>
+</html>
 Some content
